WIP: Allow offline google oauth tokens

--- a/packages/accounts-ui-unstyled/login_buttons_dialogs.html
+++ b/packages/accounts-ui-unstyled/login_buttons_dialogs.html
@@ -85,7 +85,7 @@
                 <label for="configure-login-service-dialog-{{property}}">{{label}}</label>
               </td>
               <td>
-                <input id="configure-login-service-dialog-{{property}}" type="text" />
+                <input id="configure-login-service-dialog-{{property}}" type="{{type}}" />
               </td>
             </tr>
           {{/each}}
